src/components/card/card.module.css
.container {
  display: flex;
  flex-direction: column;
  width: 320px;
  height: 400px;
  overflow: hidden;
  background-color: white;
}

.image {
  display: block;
  width: 320px;
  height: 264px;
  object-fit: cover;
}

.brand {
  font-size: 0.7em;
}

.rating {
  color: #fde047;
}

.heart {
  color: white;
  position: absolute;
  top: 10px;
  left: 277px;
}

.media {
  position: relative;
}

.prices {
  display: flex;
  gap: 1em;
}

.deal {
  color: white;
  position: absolute;
  top: 235px;
  font-size: 0.8em;
}

